<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Model.AreaQuadrado.Aquadrado">

    <TextView
        android:id="@+id/textViewConceitoAreaQuadrado"
        android:layout_width="381dp"
        android:layout_height="73dp"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginTop="@dimen/dimens"
        android:layout_marginEnd="@dimen/dimens"
        android:justificationMode="inter_word"
        android:text="@string/conceitoAreaQuadrado"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFormulaQuadrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginTop="@dimen/dimens"
        android:layout_marginEnd="@dimen/dimens"
        android:text="@string/formulaAreaQuadrado"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConceitoAreaQuadrado" />

    <Button
        android:id="@+id/btnCalculaAreaQuadrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dimens"
        android:text="@string/btnCalculaAreaQuadrado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDoLadoQuadrado" />

    <EditText
        android:id="@+id/editTextDoLadoQuadrado"
        android:layout_width="64dp"
        android:layout_height="54dp"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginTop="@dimen/dimens"
        android:layout_marginEnd="@dimen/dimens"
        android:ems="10"
        android:hint="@string/simbolo"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPratiqueAreaQuadrado" />

    <TextView
        android:id="@+id/textViewResultadoAreaQuadrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginTop="@dimen/dimens"
        android:layout_marginEnd="@dimen/dimens"
        android:text="@string/textResultadoAreaQuadrado"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculaAreaQuadrado" />

    <TextView
        android:id="@+id/textViewComentarioAreaQuadrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/dimens"
        android:text=""
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultadoAreaQuadrado" />

    <Button
        android:id="@+id/btnVideoAreaQuadrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginTop="@dimen/dimens"
        android:layout_marginEnd="@dimen/dimens"
        android:text="@string/videoAreaQuadrado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMaterialApoioAreaQuadrado"
        app:layout_constraintTop_toBottomOf="@+id/textViewFormulaQuadrado" />

    <TextView
        android:id="@+id/textViewPratiqueAreaQuadrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginTop="@dimen/dimens"
        android:layout_marginEnd="@dimen/dimens"
        android:text="@string/pratiqueAreaQuadrado"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lado2CalculoAreaQuadrado" />

    <TextView
        android:id="@+id/textViewAreaQuadrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/dimens"
        android:text="@string/textViewLabelAreaQuadrado"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextDoLadoQuadrado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPratiqueAreaQuadrado" />

    <TextView
        android:id="@+id/textViewElevadoQuadrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dimens"
        android:text="@string/potencia2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editTextDoLadoQuadrado"
        app:layout_constraintTop_toTopOf="@+id/editTextDoLadoQuadrado" />

    <Button
        android:id="@+id/btnMaterialApoioAreaQuadrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginTop="@dimen/dimens"
        android:layout_marginEnd="@dimen/dimens"
        android:text="@string/materialApoio"
        app:layout_constraintEnd_toStartOf="@+id/btnVideoAreaQuadrado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFormulaQuadrado" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="376dp"
        android:layout_height="158dp"
        android:layout_marginStart="@dimen/dimens"
        android:layout_marginEnd="@dimen/dimens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSimulacaoAreaQuadrado">

        <ImageView
            android:id="@+id/imagemQuadrado"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/image" />

    </RelativeLayout>

    <TextView
        android:id="@+id/valorAreaQuadrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/areaQuadrado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/lado1CalculoAreaQuadrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lado1AreaQuadrado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valorAreaQuadrado" />

    <TextView
        android:id="@+id/lado2CalculoAreaQuadrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lado2AreaQuadrado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lado1CalculoAreaQuadrado" />

    <TextView
        android:id="@+id/textViewSimulacaoAreaQuadrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens"
        android:layout_marginBottom="@dimen/dimens"
        android:text="@string/simulacao"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVideoAreaQuadrado" />

    <ImageView
        android:id="@+id/copyrights"
        android:layout_width="218dp"
        android:layout_height="44dp"
        android:layout_marginBottom="@dimen/dimens2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewComentarioAreaQuadrado"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logotipo" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>